--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.7",
+    "@mui/x-data-grid": "^6.12.0",
+    "@tanstack/react-query": "^4.33.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.0",
     "react": "^18.2.0",
+    "react-data-grid": "^7.0.0-beta.37",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "tss-react": "^4.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
